# robot-arm-dynamics-control

./: CMakeLists.txt  README.md
include/: arm_control_runner.hpp  arm_controller.hpp  arm_dynamics.hpp  arm_kinematics.hpp  common_types.hpp
src/: arm_control_runner.cpp  arm_controller.cpp  arm_dynamics.cpp  arm_kinematics.cpp  control_runner_demo.cpp  controller_demo.cpp  dynamics_demo.cpp  main.cpp
